--- a/HLS download.ipynb
+++ b/HLS download.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This code downloads HLS data. The example shows how to download the whole year of 2020 data for the geographic area (17TLF) that covers old woman creek wetland in Huron, OH."
+    "This code downloads HLS data. The example shows how to download the whole year of 2020 data (L30) for the geographic area (17TLF) that covers old woman creek wetland in Huron, OH."
    ]
   },
   {
